# fastapi-food

./: Dockerfile  Makefile  alembic.ini  example.env  pyproject.toml  setup.py  web.entrypoint.sh
docker-compose/: app.yaml  redis.yaml  storage.yaml
src/: web.py
src/core/: settings.py
src/core/config/: containers.py  settings.py
src/domain/base/: entities.py
src/domain/customer/: commands.py  entities.py  errors.py  services.py  use_cases.py
src/domain/user/: commands.py  entities.py  errors.py  services.py  use_cases.py  value_objects.py
src/infrastructure/postgresql/: database.py
src/infrastructure/postgresql/alembic/: env.py
src/infrastructure/postgresql/alembic/versions/: 0d0a71484be4_create_customerorm_table.py  68e92596c9ba_initial.py  a6e8f745837a_.py  f85c2210031d_initial.py
src/infrastructure/postgresql/models/: base.py  customer.py  token.py  user.py
src/infrastructure/postgresql/repisitories/: customer.py
src/infrastructure/postgresql/repositories/: customer.py  token.py  user.py
src/service/: user.py
src/services/: customer.py
